# devswSTL

./: .gitignore  .gitmodules  CMakeLists.txt
src/Private/: AlignedVector.cpp  devswSTL.cpp
src/Public/: AVX.h  AdvancedAllocators.h  AlignedVector.h  Allocators.h  AvxIntrinsics.h  BlockingQueue.h  Deque.h  Iterators.h  List.h  Map.h  Memory.h  Queue.h  Set.h  SpectraMemory.h  Stack.h  Traits.h  Vector.h  devswSTL.h
